--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ZHDeveloper/JD_Sign_Action#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "download": "^8.0.0",
     "nodemailer": "^6.4.14",
     "request": "^2.88.2",
